fixed spacing

--- a/css/footer.css
+++ b/css/footer.css
@@ -56,7 +56,7 @@
     background-color: black;
     display: flex;
     justify-content: space-between;
-    padding: 0 6rem 0 6rem;
+    padding: 0 3rem 0 3rem;
 }
 
 .contactMeHeader {
